# GammaTech

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py
cmake/: conan_provider.cmake  windeployqt.cmake
conan/: profile_Debug  profile_Release
fb_schemas/: ellipse.fbs  flatbuffers_helper.cmake  line.fbs  rect.fbs  shapes.fbs  triangle.fbs
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application.cpp  application.hpp  mediator.cpp  mediator.hpp
src/core/: CMakeLists.txt
src/core/log/: CMakeLists.txt  log.cpp  log.hpp  log_common.hpp  log_settings.hpp
src/core/threading/: CMakeLists.txt  thread_worker.cpp  thread_worker.hpp
src/core/types/: CMakeLists.txt  shape.cpp  shape.hpp
src/gammatech_app/: CMakeLists.txt  main.cpp  resources.qrc
src/proc/: CMakeLists.txt  udp_receiver.cpp  udp_receiver.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  declare_metatype.hpp  model_item.cpp  model_item.hpp  scene.cpp  scene.hpp  scene_item_action.hpp  shape_model.cpp  shape_model.hpp  shape_model_roles.hpp
src/utils/: CMakeLists.txt  objects_connector.cpp  objects_connector.hpp  objects_connector_id.cpp  objects_connector_id.hpp
